Update VulkanMod to support Minecraft 1.21.11 and enhance rendering features
- Updated fabric.mod.json to require Minecraft version 1.21.11.
- Refactored vulkanmod.mixins.json to include new mixins and remove deprecated ones.
- Added RenderSetupAccessor to access rendering pipeline and layering transforms.
- Implemented BlockRenderDispatcherMixin to enhance block rendering with Vulkan.
- Created ItemStackRenderStateLayerRenderStateM to manage item stack rendering states.
- Introduced ItemStackRenderStateMixin for improved item stack rendering logic.
- Developed ModelBlockRendererMixin to overwrite model rendering for better performance.
- Added SubmitNodeCollectionMixin and SubmitNodeStorageMixin for enhanced command queue management.
- Created VertexConsumerM to improve vertex data handling in Vulkan.
- Implemented SpriteContentsAnimatedTextureM to fix mip level calculations for animated textures.
- Updated TextureAtlasSpriteMixin to enhance sprite uploading logic.
- Added GameRendererM to manage game rendering context.
- Introduced DefaultVertexFormatM to fix vertex format padding issues.
- Developed MeshViewImpl to manage mesh data and rendering efficiently.
- Created VkConst and VkSampler classes to handle Vulkan texture sampling and addressing.