@@ -1,28 +1,13 @@
 package net.vulkanmod.render.profiling;
 
-import net.minecraft.client.gui.components.debug.DebugScreenDisplayer;
-import net.minecraft.client.gui.components.debug.DebugScreenEntry;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.level.Level;
-import net.minecraft.world.level.chunk.LevelChunk;
-import net.vulkanmod.render.chunk.WorldRenderer;
-import org.jetbrains.annotations.Nullable;
+/* JADX INFO: loaded from: VulkanMod_1.21.11-0.6.0.jar:net/vulkanmod/render/profiling/DebugEntryMemoryStats.class */
+public class DebugEntryMemoryStats implements net.minecraft.client.gui.components.debug.DebugScreenEntry {
+    private static final net.minecraft.resources.Identifier GROUP = net.minecraft.resources.Identifier.withDefaultNamespace("vk_memory");
 
-import java.util.List;
-
-public class DebugEntryMemoryStats implements DebugScreenEntry {
-    private static final ResourceLocation GROUP = ResourceLocation.withDefaultNamespace("vk_memory");
-
-    @Override
-    public void display(DebugScreenDisplayer debugScreenDisplayer, @Nullable Level level,
-                        @Nullable LevelChunk levelChunk, @Nullable LevelChunk levelChunk2) {
-        var chunkAreaManager = WorldRenderer.getInstance().getChunkAreaManager();
-
+    public void display(net.minecraft.client.gui.components.debug.DebugScreenDisplayer debugScreenDisplayer, @org.jetbrains.annotations.Nullable net.minecraft.world.level.Level level, @org.jetbrains.annotations.Nullable net.minecraft.world.level.chunk.LevelChunk levelChunk, @org.jetbrains.annotations.Nullable net.minecraft.world.level.chunk.LevelChunk levelChunk2) {
+        net.vulkanmod.render.chunk.ChunkAreaManager chunkAreaManager = net.vulkanmod.render.chunk.WorldRenderer.getInstance().getChunkAreaManager();
         if (chunkAreaManager != null) {
-            debugScreenDisplayer.addToGroup(
-                    GROUP,
-                    List.of(chunkAreaManager.getStats())
-            );
+            debugScreenDisplayer.addToGroup(GROUP, java.util.Arrays.asList(chunkAreaManager.getStats()));
         }
     }
 }
